src/style.css
*, *::after, *::before {
  padding: 0px;
  margin: 0px;
  line-height: 1.5;
  box-sizing: border-box;
}

:root {
  --padding: 10px;
  --scroller-height: 160px;
  --options-width: clamp(220px, 20vw, 240px);
}

body {
  display: grid;
  grid-template: var(--scroller-height) 1fr 1fr / var(--options-width) 4fr;

  width: 100vw;
  height: 100vh;
  max-width: 100vw;
  max-height: 100vh;

  & > div {
    padding: var(--padding);
  }
}

button, select {
  cursor: pointer;
}

div.options {
  grid-row: 1 / 3;
  background-color: #f2f2ff;
  border-bottom: 2px solid black;
  border-right: 2px solid black;

  h1 {
    text-align: center;
    margin-bottom: 40px;
  }

  form {
    display: grid;
    grid-template: 2fr 2fr 1fr / 1fr;
    row-gap: 20px;

    label {
      margin-bottom: 8px;
      font-weight: 700;
    }

    #location {
      appearance: none;
      border: thin solid black;
      padding: 0.2rem;
      font-family: "Arial", sans-serif, system-ui;

      &:focus {
        outline: 2px solid blue;
      }
    }

    #unit-type {
      appearance: base-select;
      border: 2px outset green;
      border-radius: 1px;
      background-color: #90ee90;
      padding: 0.2rem;
      transition: background-color 1s;

      &:hover {
        background-color: #80de80;
      }
    }

    .location, .unit-type {
      display: flex;
      flex-direction: column;
      align-items: center;
    }

    .buttons {
      display: flex;
      justify-content: center;
      align-items: center;

      button.submit {
        padding: 4px 8px;
        background-color: #add8e6;
        border: 2px outset blue;
        transition: background-color 1s;

        &:hover {
          background-color: #9dc8d6;
        }
      }
    }
  }

}

div.day-scroller {
  background-color: #fafffa;
  border-bottom: 2px solid black;
  max-width: 100%;

  & > div {
    display: flex;
    background-color: white;
    width: calc(100vw - var(--options-width) - var(--padding)*2);
    scrollbar-width: thin;
    scrollbar-color: blue transparent;
    height: 100%;
    overflow-x: scroll;
    border: 2px solid black;

    button.day {
      flex: 0 0 auto;
      width: 100px;
      height: 100%;
      padding: 5px;
      cursor: pointer;

      display: grid;
      grid-template: repeat(4, 1fr) / 1fr;

      img, .date {
        justify-self: center;
      }

      img {
        height: 30px;
      }

      .date {
        font-weight: 700;
      }

      .temp {
        justify-self: end;

        &.high {
          color: #500;
        }

        &.low {
          color: #005;
        }
      }
    }

    button.day + button.day {
      border-left: 2px solid black;
    }
  }
}

button.hour, button.day {
  border: none;
  background-color: white;
  transition: background-color 0.1s;

  &:hover, &:focus { background-color: #efe; }
  &:focus { outline: none; }
  &.selected { background-color: #afa; }
}


div.now, div.hour-info {
  .temp::before { content: "🌡️ "; }
  .feelslike::before { content: "🌡️ "; }
  .precipitation-prob::before { content: "🌧️ "; }
  .snow::before { content: "🌨️ "; }
  .visibility::before { content: "🌫️ "; }
  .windspeed::before { content: "🍃 "; }
  .cloudcover::before { content: "☁️ "; }
  .sunrise::before { content: "🌄 "; }
  .sunset::before { content: "🌇 "; }
}

div.now {
  grid-area: 3 / 1 / 4 / 2;
  background-color: #f2f2ff;
  border-right: 2px solid black;
  display: grid;

  .statistics {
    display: grid;
    grid-template: 30px 30px / 1fr 100px;
    grid-auto-rows: 1fr;
    gap: 2px 1px;

    img, .time, .conditions {
      place-self: center;
    }

    img {
      width: auto;
      height: 30px;
    }

    .time {
      grid-column: 1 / 2;
      font-weight: 700;
    }

    .conditions {
      grid-area: 1 / 2 / 3 / 3;
      font-style: italic;
    }

    .temp, .feelslike, .precipitation-prob, .windspeed, .cloudcover {
      grid-column: 1 / 3;
    }
  }
}

div.selected-day {
  grid-row: 2 / 4;
  background-color: #fafffa;

  & > div {
    display: grid;
    width: 100%;
    height: 100%;
    grid-template: 1fr / 3fr 1fr;
    column-gap: 20px;

    .hours {
      display: grid;
      grid-template: 1fr 1fr / 1fr;
      border: 2px outset black;

      .am-hours, .pm-hours {
        display: flex;
        background-color: white;

        button.hour {
          display: grid;
          grid-template: 2fr repeat(3, 1fr) / 1fr;
          place-items: center;
          flex: 1 0 0px;

          padding: 2px;
          cursor: pointer;

          img {
            height: 30px;
          }

          .time {
            font-weight: 700;
          }
        }

        .hour + .hour {
          border-left: thin solid black;
        }
      }

      .am-hours { 
        .hour {
          border-bottom: thin solid black;
        }
      }
      .pm-hours { }
    }

    div.hour-info {
      display: grid;
      grid-template: 1fr 1fr 5fr / 1fr;
      column-gap: 2px;

      border: 2px outset black;
      grid-area: 1 / 2 / 3 / 3;

      .address {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        &:hover, &:focus {
          white-space: wrap;
          overflow: auto;
          scrollbar-color: blue transparent;
        }
      }

      .address, .description, .time {
        padding: 0px 8px;
        text-align: center;
      }

      .time {
        font-weight: 700;
      }

      .statistics {
        display: grid;
        grid-template-columns:1fr;
        grid-auto-rows: 1fr;

        & > div {
          text-align: center;
          background-color: white;

          &:first-child { border-top: 2px solid black; }
          &:not(:last-child) { border-bottom: 2px solid black; }
        }
      }
    }
  }
}

img.loader, img.invalid {
  place-self: center;
  width: 50%;
  height: auto;

  & ~ p {
    text-align: center;
    font-weight: 700;
  }
}

@media only screen and (max-width: 1100px) {
  body {
    max-height: none;
    grid-template: 1fr var(--scroller-height) 1fr / 1fr 1fr;
  }
  div.options {
    grid-row: 1 / 2;
    padding-bottom: 30px;
  }

  div.day-scroller {
    grid-area: 2 / 1 / 3 / 3;

    & > div {
      width: calc(100vw - var(--padding)*2);
    }
  }

  div.selected-day {
    grid-area: 3 / 1 / 4 / 3;

    & > div {
      grid-template: 450px 1fr / 1fr;
      row-gap: 30px;

      div.hour-info {
        grid-area: 1 / 1 / 2 / 2;
        min-height: 450px;
      }

      div.hours {
        min-height: 500px;
      }
    }
  }

  div.now {
    grid-area: 1 / 2 / 2 / 3;
    border-bottom: 2px solid black;
    border-right: none;
    padding-bottom: 30px;
    
    .statistics {
      grid-template: 30px 30px / 1fr 1fr;
      place-items: center;
    }
  }
}

@media only screen and (max-width: 700px) {
  body {
    grid-template: 1fr 1fr var(--scroller-height) 1fr / 1fr;
  }
  div.options {
    grid-row: 1 / 2;
    padding-bottom: 30px;
    border-right: none;
  }

  div.day-scroller {
    grid-area: 3 / 1 / 4 / 2;
  }

  div.selected-day {
    grid-area: 4 / 1 / 5 / 2;

    & > div {
      .hours {
        .am-hours, .pm-hours {
          flex-direction: column;

          button.hour {
            grid-template: 1fr / 1fr 1fr repeat(2, 1fr);
            &:not(:last-child) {
              border-bottom: thin solid black;
            }
          }

          .hour + .hour {
            border-left: none;
          }
        }
      }
    }
  }

  div.now {
    grid-area: 2 / 1 / 3 / 2;
  }

  img.loader, img.invalid {
    width: 20%;
  }
}

